Fix some layout issues with columns
In cases where a speaker's bio contained a really long unbroken
line of text (a URL for example), the column containing that speaker
would take up more than its fair share of space in the block, despite
each column being assigned `1fr`. This adds some styles to mitigate
that, as well as adding some media query breakpoints at which the
columns collapse down to fewer, or a single column.

--- a/public_html/wp-content/mu-plugins/blocks/assets/src/speakers/block-content.scss
+++ b/public_html/wp-content/mu-plugins/blocks/assets/src/speakers/block-content.scss
@@ -10,16 +10,32 @@
 		list-style: none;
 	}
 
-	&.layout-grid {
-		display: grid;
-		grid-template-columns: repeat( 2, 1fr );
-		grid-column-gap: 1em;
-		grid-row-gap: 1em;
+	@media ( min-width: 400px ) {
+		&.layout-grid {
+			display: grid;
+			grid-template-columns: repeat( 2, 1fr );
+			grid-column-gap: 1em;
+			grid-row-gap: 1em;
 
-		&.grid-columns-3 {
+			/* Ensure columns maintain equal widths. */
+			/* https://stackoverflow.com/a/43312314 */
+			min-height: 0;
+			min-width: 0;
+			& .wordcamp-speaker {
+				overflow: hidden;
+				min-width: 0;
+			}
+		}
+	}
+
+	@media ( min-width: 600px ) {
+		&.layout-grid.grid-columns-3 {
 			grid-template-columns: repeat( 3, 1fr );
 		}
-		&.grid-columns-4 {
+	}
+
+	@media ( min-width: 800px ) {
+		&.layout-grid.grid-columns-4 {
 			grid-template-columns: repeat( 4, 1fr );
 		}
 	}
